namespace RPGGameLibrary.Items
{
    public interface IEquippable
    {
        void Equip();
        void Unequip();
    }
}
